# leash

./: .dockerignore  .gitignore  CLI.md  CONTRIBUTING.md  Cargo.toml  DETECTIONS.md  Dockerfile  LICENSE  LOLRMM-LOLDRIVERS-SPEC.md  README.md  RELEASE.md  SECURITY.md  SECURITY_AUDIT_4.md  SECURITY_AUDIT_5.md  SECURITY_AUDIT_6.md  THREAT_MODEL.md  docker-compose.yml  leash.service  technical-architecture.md
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  fuzz.yml  security-audit.yml
benches/: benchmarks.rs
config/: config.yaml  default.yaml
docs/: OPENCLAW_INTEGRATION_PLAN.md  leash.1
fuzz/: Cargo.toml  README.md
fuzz/corpus/config_parsing/: seed-minimal.yaml  seed-webhooks.yaml
fuzz/corpus/escape_html/: seed-script.html  seed-telegram.html
fuzz/corpus/scrub_secrets/: seed-env-keys.txt  seed-mixed-shell.txt
fuzz/fuzz_targets/: config_parsing.rs  escape_html.rs  mitre_mapping.rs  scrub_secrets.rs
reference-python/: __init__.py  collector.py  context.py  edr_config.yaml  egress_scanner.py  killswitch.py  mitre.py  models.py  node_monitor.py  response.py  sanitizer.py  scanner_skill.py  scanner_sleeper.py  test_sanitizer.py
reference-python/adapters/: ._macos.py  __init__.py  linux.py  macos.py  windows.py
scripts/: deploy-site.sh  install.sh  pgo-build.sh  release_artifacts.sh
site/: index.html
site/blog/: visibility-for-ai-agent-era.html  visibility-for-ai-agent-era.md
src/: alerts.rs  app.rs  cli.rs  collector.rs  config.rs  datasets.rs  display.rs  ebpf.rs  egress.rs  export.rs  fim.rs  fuzzing.rs  history.rs  lib.rs  main.rs  mitre.rs  models.rs  prompt_injection.rs  response.rs  scan.rs  stats.rs  test_events.rs  watchdog.rs
tests/: integration.rs  property.rs
~/.local/state/leash/: alerts.jsonl
