[package]
name = "leash"
version = "0.1.0"
edition = "2024"
authors = ["Meridian House <support@meridianhousebooks.com>"]
description = "Put your AI on a short leash. Open-source AI agent visibility tool."
license = "MIT"
repository = "https://github.com/meridianhouse/leash"
homepage = "https://leash.meridianhouse.tech"
keywords = ["security", "ai", "agent", "monitoring", "visibility"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
procfs = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify = "6"
blake3 = "1"
sha3 = "0.10"
nix = { version = "0.31", features = ["signal", "process"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.9.2"
aya = "0.13"
aya-log = "0.2"
bytes = "1"
flate2 = "1"
tar = "0.4"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
procfs.workspace = true
reqwest.workspace = true
notify.workspace = true
blake3.workspace = true
sha3.workspace = true
nix.workspace = true
rusqlite.workspace = true
rand.workspace = true
aya.workspace = true
aya-log.workspace = true
bytes.workspace = true
flate2.workspace = true
tar.workspace = true
nu-ansi-term = "0.50.3"
anyhow = { path = "third_party/anyhow" }

[dev-dependencies]
quickcheck = { path = "third_party/quickcheck" }
criterion = { path = "third_party/criterion" }

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
overflow-checks = true

[profile.release]
panic = "abort"
codegen-units = 1
strip = "symbols"
